<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:showIn="@layout/activity_login" tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="6">

            <!-- ImageView for NIDA Rooms Logo -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_screen_logo"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_margin="@dimen/activity_elements_margin"/>

            <!--  EditText for Email -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:layout_weight="1">
                <EditText android:id="@+id/editText_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <!-- EditText for Password -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:layout_weight="1">
                <EditText android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Button for Login -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_login"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:background="@drawable/button_background"
                android:layout_margin="@dimen/activity_elements_margin"
                android:layout_weight="1" />

            <!-- TextView for Forgot Password -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_forgot_password"
                android:text="@string/forgot_password"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_margin="@dimen/activity_elements_margin" />

            <!-- TextView for Create Account -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_create_account"
                android:text="@string/create_account"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_margin="@dimen/activity_elements_margin" />

        </LinearLayout>

</ScrollView>