<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:showIn="@layout/activity_forgot_password" tools:context=".ForgotPasswordActivity">

    <!--  EditText for Enter Email -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal">

        <EditText android:id="@+id/editText_user_email_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_email"
        android:text="@string/check_email_for_password_reset_link"
        android:textColor="@color/colorFontHintGrey"
        android:layout_marginTop="@dimen/activity_elements_margin"
        android:layout_gravity="center_horizontal"/>

    <!-- Button for Send Email to the user's -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_send_forgot_password"
        android:layout_gravity="center"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_margin="@dimen/activity_elements_margin"
        android:layout_marginTop="@dimen/activity_elements_margin"/>

</LinearLayout>
