<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@android:color/white"
    tools:showIn="@layout/activity_customer_or_agent" tools:context=".CustomerAgentActivity">

        <!-- Button for Create Account - Customer -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_choose_profile_customer"
            android:text="@string/customer"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorPrimary"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/cirlceTextView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="OR"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:background="@drawable/circular_textview"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_to_become_nida_rooms_agent"
            android:text="@string/to_become_nida_rooms_agent"
            android:textColor="@android:color/black"
            android:layout_below="@+id/cirlceTextView"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/textview_to_become_nida_rooms_agent"
            android:layout_marginTop="20dp">

            <!-- Button for Travel Expert -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_choose_profile_travel_expert"
                android:text="@string/travel_expert"
                android:textColor="@android:color/white"
                android:background="@drawable/button_background"
                android:layout_weight="1"/>

            <View
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_elements_margin"/>

            <!-- Button for Create Account - Taxi Driver -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_choose_profile_taxi_driver"
                android:text="@string/taxi_driver"
                android:textColor="@android:color/white"
                android:background="@drawable/button_background"
                android:layout_weight="1"/>

        </LinearLayout>

</RelativeLayout>
